# lvgl-tutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
layout/: CMakeLists.txt  lv_conf.h  main.cpp
quickstart/: CMakeLists.txt  lv_conf.h  main.c
